--- a/index.html
+++ b/index.html
@@ -126,18 +126,18 @@ let last=performance.now();
 
 let obstacles=[];
 
-/* speed in px/second — faster start & quicker ramp */
-const SPEED_BASE_PPS = 240;   // start speed (px/sec)
-const SPEED_MAX_PPS  = 1200;  // cap
-const ACCEL_PPS2     = 18;    // faster acceleration
-const WARMUP_SEC     = 0.5;   // short warmup
+/* speed in px/second — higher max + quicker ramp */
+const SPEED_BASE_PPS = 260;    // start speed
+const SPEED_MAX_PPS  = 1600;   // higher top speed
+const ACCEL_PPS2     = 22;     // faster acceleration
+const WARMUP_SEC     = 0.45;   // short warmup
 let  speedPPS        = SPEED_BASE_PPS;
 
-/* jump physics — more responsive (quicker rise & fall) */
-const GRAVITY_ASC  = 0.54;    // faster rise damping
-const GRAVITY_DESC = 0.82;    // faster fall
-const JUMP_VEL_1   = 13.0;    // single jump pop
-const JUMP_VEL_2   = 13.6;    // bigger double jump
+/* jump physics — more responsive (quicker up & down) */
+const GRAVITY_ASC  = 0.58;     // faster rise damping
+const GRAVITY_DESC = 0.88;     // faster fall
+const JUMP_VEL_1   = 13.2;     // single
+const JUMP_VEL_2   = 13.9;     // double
 
 /* size bands + types */
 const BANDS = ['small','medium','tall'];
@@ -149,7 +149,23 @@ const COLORS = {
   bldg:'#607d8b', window:'#bbdefb', roof:'#455a64'
 };
 
-let distSinceSpawn=0, nextGapPx=520;  // earlier first spawn (speed is higher)
+let distSinceSpawn=0, nextGapPx=520;  // earlier first spawn
+
+/* ===== spawn tempo randomizer (prevents predictable cadence) ===== */
+let tempo=1.0;                         // multiplies cadence (lower=faster spawns)
+let tempoT=0;                          // time since last tempo change
+let tempoPeriod=randRange(3.5, 6.5);   // seconds until next change
+function randRange(a,b){ return a + Math.random()*(b-a); }
+function updateTempo(dt){
+  tempoT += dt;
+  if(tempoT >= tempoPeriod){
+    tempoT = 0;
+    tempoPeriod = randRange(3.5, 6.5);
+    // pick a new tempo in [0.8, 1.25], slightly favoring 1.0
+    const r = (Math.random()+Math.random())/2; // mid‑biased
+    tempo = 0.8 + r*(1.25-0.8);
+  }
+}
 
 /* ===== helpers ===== */
 function drawRoad(){
@@ -197,19 +213,20 @@ function aabbOverlap(a,b){
   return a.x < b.x + b.w && a.x + a.w > b.x && a.y < b.y + b.h && a.y + a.h > b.y;
 }
 
-/* bias to middle heights (readable rhythm) */
-function randMid(){ return (Math.random()+Math.random())/2; }
+/* randomness helpers */
+function randMid(){ return (Math.random()+Math.random())/2; }      // bell-ish
+function randWild(){ return (Math.random()<0.5)?Math.random():randMid(); } // mix for variety
 
-/* Band picker — early **tall** bias then even out; with anti‑streak */
+/* Early tall bias (to force double jumps sooner), fades with score */
 function pickBand(){
-  const early = Math.max(0, 1 - (score/600)); // strong early, fades by ~600 pts
-  // early weights (more talls), later weights (balanced)
-  const wEarly={small:0.30, medium:0.34, tall:0.36};
-  const wLate ={small:0.36, medium:0.36, tall:0.28};
+  const tallPush = Math.max(0, 1 - (score/500)); // strong early, fades by ~500 pts
+  // early weights (heavy on tall), later (balanced)
+  const wEarly={small:0.26, medium:0.32, tall:0.42};
+  const wLate ={small:0.34, medium:0.36, tall:0.30};
   const w={
-    small: wEarly.small*early + wLate.small*(1-early),
-    medium:wEarly.medium*early + wLate.medium*(1-early),
-    tall:  wEarly.tall*early  + wLate.tall*(1-early)
+    small: wEarly.small*tallPush + wLate.small*(1-tallPush),
+    medium:wEarly.medium*tallPush + wLate.medium*(1-tallPush),
+    tall:  wEarly.tall*tallPush  + wLate.tall*(1-tallPush)
   };
   if(lastBand && sameBandStreak>=MAX_SAME_BAND){
     const others=BANDS.filter(b=>b!==lastBand);
@@ -222,43 +239,53 @@ function pickBand(){
   return pick;
 }
 
-/* object picker — triangles, trees, buildings from the start */
+/* object picker — triangles, trees, buildings (uniform) */
 const OBSTACLE_TYPES = ['triangle','tree','building'];
 function pickObstacleType(){
   return OBSTACLE_TYPES[Math.floor(Math.random()*OBSTACLE_TYPES.length)];
 }
 
-/* specs per band — capped for small screens */
+/* specs per band — TALLER overall + higher cap to force doubles */
 function triangleSpecByBand(band){
   let hMin,hMax;
-  if(band==='small'){ hMin=26; hMax=40; }
-  else if(band==='medium'){ hMin=44; hMax=56; }
-  else { hMin=58; hMax=90; } // tall
-  const cap=Math.max(60, H*0.55);
+  if(band==='small'){ hMin=34; hMax=52; }
+  else if(band==='medium'){ hMin=58; hMax=78; }
+  else { hMin=84; hMax=118; } // tall (big!)
+  const cap=Math.max(80, H*0.62);     // higher screen cap
   hMax=Math.min(hMax, cap);
-  const h = hMin + randMid()*(hMax-hMin);
-  const base = h * (0.88 + Math.random()*0.08); // wider, fairer
+  const h = hMin + randWild()*(hMax-hMin);     // wilder variety
+  const base = h * (0.88 + Math.random()*0.10);
   return {base, height:h};
 }
 function rectSpecByBand(band){
   let wMin,wMax,hMin,hMax;
-  if(band==='small'){ wMin=28; wMax=44; hMin=28; hMax=44; }
-  else if(band==='medium'){ wMin=44; wMax=64; hMin=44; hMax=64; }
-  else { wMin=62; wMax=86; hMin=62; hMax=92; }
-  const w = wMin + randMid()*(wMax-wMin);
-  const h = hMin + randMid()*(hMax-hMin);
+  if(band==='small'){ wMin=34; wMax=54; hMin=34; hMax=52; }
+  else if(band==='medium'){ wMin=56; wMax=80; hMin=56; hMax=82; }
+  else { wMin=78; wMax=110; hMin=80; hMax=120; }
+  const w = wMin + randWild()*(wMax-wMin);
+  const h = hMin + randWild()*(hMax-hMin);
   return {w,h};
 }
 
-/* spacing planner — widens with speed & band so fast play stays fair */
+/* spacing planner — randomized cadence + widened at speed & band */
 function planNextGapPx(vPPS, band){
   const pxps=Math.max(1, vPPS);
-  const bandFactor = band==='tall' ? 1.22 : band==='medium' ? 1.08 : 1.0;
-  const baseRT = band==='tall' ? 1.02 : band==='medium' ? 0.94 : 0.88; // slightly tighter rhythm
-  const rt = Math.max(0.66, baseRT + ((Math.random()*2-1)*0.10));
-  // widen margin more aggressively with speed
-  const margin = (150 + (vPPS/7)) * bandFactor + (band==='tall'?78:(band==='medium'?40:18));
-  return Math.max(260, Math.round(pxps*rt + margin));
+  const bandFactor = band==='tall' ? 1.28 : band==='medium' ? 1.1 : 1.0;
+  // base rhythm (lower = faster spawn), with extra jitter
+  const baseRT = band==='tall' ? 1.05 : band==='medium' ? 0.96 : 0.88;
+  const jitter = (Math.random()*2-1) * 0.22; // more jitter than before
+  const rt = Math.max(0.6, (baseRT + jitter) * (tempo)); // tempo mod
+
+  // widen with speed aggressively so fast play stays fair
+  const margin = (165 + (vPPS/6)) * bandFactor + (band==='tall'?90:(band==='medium'?46:22));
+
+  // Occasionally inject a “burst” (shorter gap) or “breather” (wider gap)
+  const moodRoll = Math.random();
+  let mood=1.0;
+  if(moodRoll<0.10) mood=0.82;       // bursty
+  else if(moodRoll>0.90) mood=1.25;  // breather
+
+  return Math.max(260, Math.round((pxps*rt + margin) * mood));
 }
 
 /* spawn */
@@ -268,17 +295,17 @@ function spawnObstacle(){
 
   if(kind==='triangle'){
     const spec=triangleSpecByBand(band);
-    const color = band==='tall'?COLORS.triangleTall : band==='medium'?COLORS.triangleMid : COLORS.triangleSmall;
+    const color = band==='tall' ? COLORS.triangleTall : band==='medium' ? COLORS.triangleMid : COLORS.triangleSmall;
     obstacles.push({ kind, band, x:W+24, y:floorY, base:spec.base, height:spec.height, color });
   } else if(kind==='tree'){
     const sz=rectSpecByBand(band);
-    const trunkW=Math.max(10, sz.w*0.25), trunkH=Math.max(20, sz.h*0.6);
-    const crownR=Math.max(16, Math.max(sz.w,sz.h)*0.7);
+    const trunkW=Math.max(12, sz.w*0.26), trunkH=Math.max(22, sz.h*0.62);
+    const crownR=Math.max(18, Math.max(sz.w,sz.h)*0.72);
     obstacles.push({ kind, band, x:W+24, y:floorY, w:sz.w, h:sz.h, trunkW, trunkH, crownR });
   } else { // building
     const sz=rectSpecByBand(band);
-    const floors = Math.max(2, Math.round(sz.h/16));
-    const cols   = Math.max(2, Math.round(sz.w/18));
+    const floors = Math.max(2, Math.round(sz.h/14));
+    const cols   = Math.max(2, Math.round(sz.w/16));
     obstacles.push({ kind, band, x:W+24, y:floorY, w:sz.w, h:sz.h, floors, cols });
   }
 
@@ -323,7 +350,7 @@ function drawAndCollideObstacle(o, hit){
     for(let r=0;r<o.floors;r++){
       let x=bx+pad;
       for(let c=0;c<o.cols;c++){
-        ctx.fillStyle= (Math.random()<0.15) ? '#cfd8dc' : COLORS.window;
+        ctx.fillStyle= (Math.random()<0.18) ? '#cfd8dc' : COLORS.window;
         ctx.fillRect(x, y, wW, wH);
         x += wW+gapX;
         if(x + wW + pad > bx+bw) break;
@@ -345,6 +372,7 @@ function resetGame(){
   obstacles.length=0;
   distSinceSpawn=0; nextGapPx=520;
   lastBand=null; sameBandStreak=0;
+  tempo=1.0; tempoT=0; tempoPeriod=randRange(3.5,6.5);
 
   player.y=floorY-player.h; player.dy=0; player.onGround=true; player.jumps=0;
   last=performance.now();
@@ -376,6 +404,8 @@ function frame(){
   last=now;
   elapsed += dt;
   const dtScale = Math.min(2.0, dt * 60); // ~60fps scale for jump physics
+
+  updateTempo(dt); // randomize spawn cadence over time
 
   // faster opening + quicker ramp
   if (elapsed < WARMUP_SEC) { speedPPS = SPEED_BASE_PPS; }
@@ -413,7 +443,7 @@ function frame(){
     const span = (o.base||o.w||o.r*2);
     if(o.x + span < 0){
       obstacles.splice(i,1);
-      scoreBonus += (o.band==='tall'?8:(o.band==='medium'?6:5)); // bonus by difficulty
+      scoreBonus += (o.band==='tall'?10:(o.band==='medium'?7:5)); // bonus by difficulty
     }
   }
 
